2005-04-05  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-04-05  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-04-04  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-04-03  Ryan Lortie  <desrt@desrt.ca>

	* gweather-pref.c: Since the current_location structure is free'd
	by the row_changed callback and since we change the active row
	while populating the TreeView in the XML parser, make a copy.

	* gweather-xml.c: Replace a direct "return -1" with "goto error_out"
	to ensure that things get free'd up in the error case.

	Both of the above are fixes to problems spotted by Kjartan.

2005-04-02  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-04-01  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-31  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-31  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-31  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-30  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2003-03-30  Ryan Lortie  <desrt@desrt.ca>

	* gweather-about.c: Fix a silly typo.

2005-03-30  Christian Rose  <menthos@menthos.com>
