@@ -35938,11 +35938,13 @@
   </country>
   <country>
     <_name>North Korea</_name>
+    <!-- No METAR info available (checked 2005-04-06)
     <location>
       <_name>Kimchaek</_name>
       <code>ZKKC</code>
       <coordinates>40-40N 129-12E</coordinates>
     </location>
+    -->
     <location>
       <_name>Pyongyang</_name>
       <code>ZKPY</code>
@@ -35951,13 +35953,15 @@
   </country>
   <country>
     <_name>Hong Kong</_name>
+    <!-- No METAR info available (checked 2005-04-06)
     <location>
       <_name>Cheung Chau</_name>
       <code>VHCH</code>
       <coordinates>22-12N 114-01E</coordinates>
     </location>
+    -->
     <location>
-      <_name>Hong Kong</_name>
+      <_name>Hong Kong International Airport</_name>
       <code>VHHH</code>
       <coordinates>22-20N 114-11E</coordinates>
     </location>
@@ -36389,118 +36393,221 @@
   <country>
     <_name>People's Republic of China</_name>
     <location>
+      <!-- Translators: This is a city in China -->
       <_name>Beijing</_name>
       <code>ZBAA</code>
       <coordinates>39-56N 116-17E</coordinates>
     </location>
-    <location>
-      <_name>Changchun</_name>
-      <code>ZYCC</code>
-      <coordinates>43-54N 125-13E</coordinates>
-    </location>
-    <location>
-      <_name>Changsha</_name>
-      <code>ZGCS</code>
-      <coordinates>28-12N 113-05E</coordinates>
-    </location>
-    <location>
-      <_name>Changsha</_name>
-      <code>ZGHA</code>
-      <coordinates>28-14N 112-52E</coordinates>
-    </location>
-    <location>
-      <_name>Chengdu</_name>
-      <code>ZUUU</code>
-      <coordinates>30-40N 104-01E</coordinates>
-    </location>
-    <location>
-      <_name>Chongqing</_name>
-      <code>ZUCK</code>
-      <coordinates>29-31N 106-29E</coordinates>
-    </location>
-    <location>
-      <_name>Dalian</_name>
-      <code>ZYTL</code>
-      <coordinates>38-54N 121-38E</coordinates>
-    </location>
-    <location>
-      <_name>Fuzhou</_name>
-      <code>ZSFZ</code>
-      <coordinates>26-05N 119-17E</coordinates>
-    </location>
-    <location>
-      <_name>Ganzhou</_name>
-      <code>ZSGZ</code>
-      <coordinates>25-51N 114-57E</coordinates>
-    </location>
-    <location>
-      <_name>Guangzhou</_name>
-      <code>ZGGG</code>
-      <coordinates>23-10N 113-20E</coordinates>
-    </location>
-    <location>
-      <_name>Guilin</_name>
-      <code>ZGKL</code>
-      <coordinates>25-20N 110-18E</coordinates>
-    </location>
-    <location>
-      <_name>Guiyang</_name>
-      <code>ZUGY</code>
-      <coordinates>26-35N 106-43E</coordinates>
-    </location>
-    <location>
-      <_name>Haikou</_name>
-      <code>ZGHK</code>
-      <coordinates>20-02N 110-21E</coordinates>
-    </location>
-    <location>
-      <_name>Hailar</_name>
-      <code>ZBLA</code>
-    </location>
-    <location>
-      <_name>Hami</_name>
-      <code>ZWHM</code>
-      <coordinates>42-49N 093-31E</coordinates>
-    </location>
-    <location>
-      <_name>Hangzhou</_name>
-      <code>ZSHC</code>
-      <coordinates>30-14N 120-10E</coordinates>
-    </location>
-    <location>
-      <_name>Harbin</_name>
-      <code>ZYHB</code>
-      <coordinates>46-01-12N 126-34-48E</coordinates>
-    </location>
-    <location>
-      <_name>Hefei</_name>
-      <code>ZSOF</code>
-      <coordinates>31-52N 117-14E</coordinates>
-    </location>
-    <location>
-      <_name>Hohhot</_name>
-      <code>ZBHH</code>
-      <coordinates>40-49N 111-41E</coordinates>
-    </location>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Jilin</_name>
+      <location>
+        <!-- Translators: This is in Jilin province in China -->
+        <_name>Changchun</_name>
+        <code>ZYCC</code>
+        <coordinates>43-54N 125-13E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Hunan</_name>
+      <!-- No METAR info available (checked 2005-04-06)
+      <location>
+        <_name>Changsha</_name>
+        <code>ZGCS</code>
+        <coordinates>28-12N 113-05E</coordinates>
+      </location>
+      -->
+      <location>
+        <!-- Translators: This is in Hunan province in China -->
+        <_name>Changsha</_name>
+        <code>ZGHA</code>
+        <coordinates>28-14N 112-52E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Sichuan</_name>
+      <location>
+        <!-- Translators: This is in Sichuan province in China -->
+        <_name>Chengdu</_name>
+        <code>ZUUU</code>
+        <coordinates>30-40N 104-01E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Sichuan province in China -->
+        <_name>Chongqing</_name>
+        <code>ZUCK</code>
+        <coordinates>29-31N 106-29E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Liaoning</_name>
+      <location>
+        <!-- Translators: This is in Liaoning province in China -->
+        <_name>Dalian</_name>
+        <code>ZYTL</code>
+        <coordinates>38-54N 121-38E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Liaoning province in China -->
+        <_name>Shenyang/Taokian</_name>
+        <code>ZYTX</code>
+        <coordinates>41-48N 123-24E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Fujian</_name>
+      <location>
+        <!-- Translators: This is in Fujian province in China -->
+        <_name>Fuzhou</_name>
+        <code>ZSFZ</code>
+        <coordinates>26-05N 119-17E</coordinates>
+      </location>
+    </city>
+    <!-- No METAR info available (checked 2005-04-06)
+    <city>
+      <_name>Jiangxi</_name>
+      <location>
+        <_name>Ganzhou</_name>
+        <code>ZSGZ</code>
+        <coordinates>25-51N 114-57E</coordinates>
+      </location>
+    </city>
+    -->
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Guangdong</_name>
+      <location>
+        <!-- Translators: This is in Guangdong province in China -->
+        <_name>Guangzhou</_name>
+        <code>ZGGG</code>
+        <coordinates>23-10N 113-20E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Guangdong province in China -->
+        <_name>Shenzhen</_name>
+        <code>ZGSZ</code>
+        <coordinates>22-33N 114-06E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Guangxi</_name>
+      <location>
+        <!-- Translators: This is in Guangxi province in China -->
+        <_name>Guilin</_name>
+        <code>ZGKL</code>
+        <coordinates>25-20N 110-18E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Guizhou</_name>
+      <location>
+        <!-- Translators: This is in Guizhou province in China -->
+        <_name>Guiyang</_name>
+        <code>ZUGY</code>
+        <coordinates>26-35N 106-43E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Hainan</_name>
+      <location>
+        <!-- Translators: This is in Hainan province in China -->
+        <_name>Haikou</_name>
+        <code>ZGHK</code>
+        <coordinates>20-02N 110-21E</coordinates>
+      </location>
+    </city>
+    <!-- No METAR info available (checked 2005-04-06)
+    <city>
+      <_name>Xinjiang</_name>
+      <location>
+        <_name>Hami</_name>
+        <code>ZWHM</code>
+        <coordinates>42-49N 093-31E</coordinates>
+      </location>
+    </city>
+    -->
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Zhejiang</_name>
+      <location>
+        <!-- Translators: This is in Zhejiang province in China -->
+        <_name>Hangzhou</_name>
+        <code>ZSHC</code>
+        <coordinates>30-14N 120-10E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Heilongjiang</_name>
+      <location>
+        <!-- Translators: This is in Heilongjiang province in China -->
+        <_name>Harbin</_name>
+        <code>ZYHB</code>
+        <coordinates>46-01-12N 126-34-48E</coordinates>
+      </location>
+      <!-- No METAR info available (checked 2005-04-06)
+      <location>
+        <_name>Jaimusi</_name>
+        <code>ZYJM</code>
+      </location>
+      -->
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Inner Mongolia</_name>
+      <!-- No METAR info available (checked 2005-04-06)
+      <location>
+        <_name>Hailar Airport</_name>
+        <code>ZBLA</code>
+        <coordinates>49-12N 119-42E</coordinates>
+      </location>
+      -->
+      <location>
+        <!-- Translators: This is in Inner Mongolia province in China -->
+        <_name>Hohhot</_name>
+        <code>ZBHH</code>
+        <coordinates>40-49N 111-41E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Anhui</_name>
+      <location>
+        <!-- Translators: This is in Anhui province in China -->
+        <_name>Hefei</_name>
+        <code>ZSOF</code>
+        <coordinates>31-52N 117-14E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Hotan</_name>
       <code>ZWTN</code>
       <coordinates>37-08N 079-56E</coordinates>
     </location>
-    <location>
-      <_name>Jaimusi</_name>
-      <code>ZYJM</code>
-    </location>
-    <!-- ZSTN is from METAR list; ZSJN is from previous revision -->
-    <location>
-      <_name>Jinan</_name>
-      <code>ZSTN</code>
-      <coordinates>36-41N 116-59E</coordinates>
-    </location>
-    <location>
-      <_name>Jinan</_name>
-      <code>ZSJN</code>
-    </location>
+    <city>
+      <!-- Translators: This is a province in China -->
+      <_name>Shantong</_name>
+      <!-- ZSTN and ZSJN are very near, weather.noaa.gov only knows ZSJN
+      <location>
+        <_name>Jinan</_name>
+        <code>ZSTN</code>
+        <coordinates>36-41N 116-59E</coordinates>
+      </location>
+      -->
+      <location>
+        <!-- Translators: This is in Shantong province in China -->
+        <_name>Jinan/Yaoqiang Airport</_name>
+        <code>ZSJN</code>
+        <coordinates>36-50N 117-10E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Jiuquan</_name>
       <code>ZLJQ</code>
@@ -36568,30 +36675,26 @@
       <code>ZJSY</code>
       <coordinates>18-18N 109-24E</coordinates>
     </location>
-    <location>
-      <_name>Shanghai/Hongqiao</_name>
-      <code>ZSSS</code>
-      <coordinates>31-10N 121-26E</coordinates>
-    </location>
-    <location>
-      <_name>Shanghai/Pudong</_name>
-      <code>ZSPD</code>
-      <coordinates>31-07N 121-46E</coordinates>
-    </location>
+    <city>
+      <!-- Translators: This is a city in China -->
+      <_name>Shanghai</_name>
+      <location>
+        <!-- Translators: This is in Shanghai city in China -->
+        <_name>Hongqiao</_name>
+        <code>ZSSS</code>
+        <coordinates>31-10N 121-26E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Shanghai city in China -->
+        <_name>Pudong</_name>
+        <code>ZSPD</code>
+        <coordinates>31-07N 121-46E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Shantou</_name>
       <code>ZGOW</code>
       <coordinates>23-24N 116-41E</coordinates>
-    </location>
-    <location>
-      <_name>Shenyang/Taokian</_name>
-      <code>ZYTX</code>
-      <coordinates>41-48N 123-24E</coordinates>
-    </location>
-    <location>
-      <_name>Shenzhen</_name>
-      <code>ZGSZ</code>
-      <coordinates>22-33N 114-06E</coordinates>
     </location>
     <location>
       <_name>Shijiazhuang</_name>
@@ -36602,11 +36705,16 @@
       <code>ZBYN</code>
       <coordinates>37-47N 112-33E</coordinates>
     </location>
-    <location>
-      <_name>Tianjin/Zhangguizhu</_name>
-      <code>ZBTJ</code>
-      <coordinates>39-11N 117-21E</coordinates>
-    </location>
+    <city>
+      <!-- Translators: This is a city in China -->
+      <_name>Tianjin</_name>
+      <location>
+        <!-- Translators: This is in Tianjin city in China. Its METAR name, "zhangguizhu", is wrong. -->
+        <_name>Zhang Gui Zhuang</_name>
+        <code>ZBTJ</code>
+        <coordinates>39-11N 117-21E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Urum-Qi/Diwopu</_name>
       <code>ZWWW</code>
