@@ -1,3 +1,8 @@
+2005-04-05  Abel Cheung  <maddog@linuxhall.org>
+
+	* Locations.xml.in: Add some more translator comments, and comment
+	out some stations which has no METAR info. (WIP)
+	
 2005-04-05  Christian Rose  <menthos@menthos.com>
 
 	* Locations.xml.in: Added some more translator
